compiler/front/parser/scriptblock_parser.go
// Generated from ScriptBlockParser.g4 by ANTLR 4.7.

package parser // ScriptBlockParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "'/*'", "'*/'", "", "", "'func'", "'script'", "'command'",
	"'const'", "'run'", "'raise'", "'delay'", "'import'", "'internal'", "'->'",
	"'('", "')'", "'{'", "'}'", "'['", "']'", "','", "'='", "';'", "':'", "'^'",
	"'*'", "'/'", "'//'", "'+'", "'-'", "'.'", "'>'", "'<'", "'#'",
}
var symbolicNames = []string{
	"", "WS", "COMMENT", "DOC_START", "DOC_END", "DOC_LINE", "NEWLINES", "FUNCTION",
	"TEMPLATE", "NATIVE", "CONSTANT", "RUN", "RAISE", "DELAY", "IMPORT", "INTERNAL",
	"ARROW", "OPAREN", "CPAREN", "OCURLY", "CCURLY", "OSQUARE", "CSQUARE",
	"COMMA", "EQUALS", "SEMICOLON", "COLON", "POWER", "MULTIPLY", "DIVIDE",
	"INTEGER_DIVIDE", "PLUS", "SUBTRACT", "DOT", "GREATER_THAN", "LESS_THAN",
	"POUND", "IDENTIFIER", "SIGN", "DIGITS", "STRING",
}

var ruleNames = []string{
	"unit", "documentation", "parameterList", "argumentList", "structureList",
	"nativeCall", "functionCall", "functionFrame", "functionDefinition", "functionDefinitionShortcut",
	"tag", "templateDefinition", "constantDefinition", "formatter", "importLine",
	"topDefinition", "statement", "delayStructure", "raise", "expression",
	"number",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type ScriptBlockParser struct {
	*antlr.BaseParser
}

func NewScriptBlockParser(input antlr.TokenStream) *ScriptBlockParser {
	this := new(ScriptBlockParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "ScriptBlockParser.g4"

	return this
}

// ScriptBlockParser tokens.
const (
	ScriptBlockParserEOF            = antlr.TokenEOF
	ScriptBlockParserWS             = 1
	ScriptBlockParserCOMMENT        = 2
	ScriptBlockParserDOC_START      = 3
	ScriptBlockParserDOC_END        = 4
	ScriptBlockParserDOC_LINE       = 5
	ScriptBlockParserNEWLINES       = 6
	ScriptBlockParserFUNCTION       = 7
	ScriptBlockParserTEMPLATE       = 8
	ScriptBlockParserNATIVE         = 9
	ScriptBlockParserCONSTANT       = 10
	ScriptBlockParserRUN            = 11
	ScriptBlockParserRAISE          = 12
	ScriptBlockParserDELAY          = 13
	ScriptBlockParserIMPORT         = 14
	ScriptBlockParserINTERNAL       = 15
	ScriptBlockParserARROW          = 16
	ScriptBlockParserOPAREN         = 17
	ScriptBlockParserCPAREN         = 18
	ScriptBlockParserOCURLY         = 19
	ScriptBlockParserCCURLY         = 20
	ScriptBlockParserOSQUARE        = 21
	ScriptBlockParserCSQUARE        = 22
	ScriptBlockParserCOMMA          = 23
	ScriptBlockParserEQUALS         = 24
	ScriptBlockParserSEMICOLON      = 25
	ScriptBlockParserCOLON          = 26
	ScriptBlockParserPOWER          = 27
	ScriptBlockParserMULTIPLY       = 28
	ScriptBlockParserDIVIDE         = 29
	ScriptBlockParserINTEGER_DIVIDE = 30
	ScriptBlockParserPLUS           = 31
	ScriptBlockParserSUBTRACT       = 32
	ScriptBlockParserDOT            = 33
	ScriptBlockParserGREATER_THAN   = 34
	ScriptBlockParserLESS_THAN      = 35
	ScriptBlockParserPOUND          = 36
	ScriptBlockParserIDENTIFIER     = 37
	ScriptBlockParserSIGN           = 38
	ScriptBlockParserDIGITS         = 39
	ScriptBlockParserSTRING         = 40
)

// ScriptBlockParser rules.
const (
	ScriptBlockParserRULE_unit                       = 0
	ScriptBlockParserRULE_documentation              = 1
	ScriptBlockParserRULE_parameterList              = 2
	ScriptBlockParserRULE_argumentList               = 3
	ScriptBlockParserRULE_structureList              = 4
	ScriptBlockParserRULE_nativeCall                 = 5
	ScriptBlockParserRULE_functionCall               = 6
	ScriptBlockParserRULE_functionFrame              = 7
	ScriptBlockParserRULE_functionDefinition         = 8
	ScriptBlockParserRULE_functionDefinitionShortcut = 9
	ScriptBlockParserRULE_tag                        = 10
	ScriptBlockParserRULE_templateDefinition         = 11
	ScriptBlockParserRULE_constantDefinition         = 12
	ScriptBlockParserRULE_formatter                  = 13
	ScriptBlockParserRULE_importLine                 = 14
	ScriptBlockParserRULE_topDefinition              = 15
	ScriptBlockParserRULE_statement                  = 16
	ScriptBlockParserRULE_delayStructure             = 17
	ScriptBlockParserRULE_raise                      = 18
	ScriptBlockParserRULE_expression                 = 19
	ScriptBlockParserRULE_number                     = 20
)

// IUnitContext is an interface to support dynamic dispatch.
type IUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnitContext differentiates from other interfaces.
	IsUnitContext()
}

type UnitContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnitContext() *UnitContext {
	var p = new(UnitContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ScriptBlockParserRULE_unit
	return p
}

func (*UnitContext) IsUnitContext() {}

func NewUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnitContext {
	var p = new(UnitContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ScriptBlockParserRULE_unit

	return p
}

func (s *UnitContext) GetParser() antlr.Parser { return s.parser }

func (s *UnitContext) EOF() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserEOF, 0)
}

func (s *UnitContext) AllImportLine() []IImportLineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportLineContext)(nil)).Elem())
	var tst = make([]IImportLineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportLineContext)
		}
	}

	return tst
}

func (s *UnitContext) ImportLine(i int) IImportLineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportLineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportLineContext)
}

func (s *UnitContext) AllNEWLINES() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserNEWLINES)
}

func (s *UnitContext) NEWLINES(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserNEWLINES, i)
}

func (s *UnitContext) AllTopDefinition() []ITopDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITopDefinitionContext)(nil)).Elem())
	var tst = make([]ITopDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITopDefinitionContext)
		}
	}

	return tst
}

func (s *UnitContext) TopDefinition(i int) ITopDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITopDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITopDefinitionContext)
}

func (s *UnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.EnterUnit(s)
	}
}

func (s *UnitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.ExitUnit(s)
	}
}

func (p *ScriptBlockParser) Unit() (localctx IUnitContext) {
	localctx = NewUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ScriptBlockParserRULE_unit)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ScriptBlockParserIMPORT {
		{
			p.SetState(42)
			p.ImportLine()
		}
		{
			p.SetState(43)
			p.Match(ScriptBlockParserNEWLINES)
		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ScriptBlockParserDOC_START)|(1<<ScriptBlockParserFUNCTION)|(1<<ScriptBlockParserTEMPLATE)|(1<<ScriptBlockParserCONSTANT)|(1<<ScriptBlockParserINTERNAL))) != 0) || _la == ScriptBlockParserPOUND {
		{
			p.SetState(50)
			p.TopDefinition()
		}

		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(56)
		p.Match(ScriptBlockParserEOF)
	}

	return localctx
}

// IDocumentationContext is an interface to support dynamic dispatch.
type IDocumentationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentationContext differentiates from other interfaces.
	IsDocumentationContext()
}

type DocumentationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentationContext() *DocumentationContext {
	var p = new(DocumentationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ScriptBlockParserRULE_documentation
	return p
}

func (*DocumentationContext) IsDocumentationContext() {}

func NewDocumentationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentationContext {
	var p = new(DocumentationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ScriptBlockParserRULE_documentation

	return p
}

func (s *DocumentationContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentationContext) DOC_START() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserDOC_START, 0)
}

func (s *DocumentationContext) AllNEWLINES() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserNEWLINES)
}

func (s *DocumentationContext) NEWLINES(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserNEWLINES, i)
}

func (s *DocumentationContext) DOC_END() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserDOC_END, 0)
}

func (s *DocumentationContext) AllDOC_LINE() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserDOC_LINE)
}

func (s *DocumentationContext) DOC_LINE(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserDOC_LINE, i)
}

func (s *DocumentationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.EnterDocumentation(s)
	}
}

func (s *DocumentationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.ExitDocumentation(s)
	}
}

func (p *ScriptBlockParser) Documentation() (localctx IDocumentationContext) {
	localctx = NewDocumentationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ScriptBlockParserRULE_documentation)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(ScriptBlockParserDOC_START)
	}
	{
		p.SetState(59)
		p.Match(ScriptBlockParserNEWLINES)
	}
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ScriptBlockParserDOC_LINE {
		{
			p.SetState(60)
			p.Match(ScriptBlockParserDOC_LINE)
		}

		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(66)
		p.Match(ScriptBlockParserDOC_END)
	}
	{
		p.SetState(67)
		p.Match(ScriptBlockParserNEWLINES)
	}

	return localctx
}

// IParameterListContext is an interface to support dynamic dispatch.
type IParameterListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParameterListContext differentiates from other interfaces.
	IsParameterListContext()
}

type ParameterListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParameterListContext() *ParameterListContext {
	var p = new(ParameterListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ScriptBlockParserRULE_parameterList
	return p
}

func (*ParameterListContext) IsParameterListContext() {}

func NewParameterListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParameterListContext {
	var p = new(ParameterListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ScriptBlockParserRULE_parameterList

	return p
}

func (s *ParameterListContext) GetParser() antlr.Parser { return s.parser }

func (s *ParameterListContext) OPAREN() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserOPAREN, 0)
}

func (s *ParameterListContext) CPAREN() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserCPAREN, 0)
}

func (s *ParameterListContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserIDENTIFIER)
}

func (s *ParameterListContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserIDENTIFIER, i)
}

func (s *ParameterListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserCOMMA)
}

func (s *ParameterListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserCOMMA, i)
}

func (s *ParameterListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParameterListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParameterListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.EnterParameterList(s)
	}
}

func (s *ParameterListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.ExitParameterList(s)
	}
}

func (p *ScriptBlockParser) ParameterList() (localctx IParameterListContext) {
	localctx = NewParameterListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ScriptBlockParserRULE_parameterList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.Match(ScriptBlockParserOPAREN)
	}
	p.SetState(78)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == ScriptBlockParserIDENTIFIER {
		{
			p.SetState(70)
			p.Match(ScriptBlockParserIDENTIFIER)
		}
		p.SetState(75)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == ScriptBlockParserCOMMA {
			{
				p.SetState(71)
				p.Match(ScriptBlockParserCOMMA)
			}
			{
				p.SetState(72)
				p.Match(ScriptBlockParserIDENTIFIER)
			}

			p.SetState(77)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(80)
		p.Match(ScriptBlockParserCPAREN)
	}

	return localctx
}

// IArgumentListContext is an interface to support dynamic dispatch.
type IArgumentListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArgumentListContext differentiates from other interfaces.
	IsArgumentListContext()
}

type ArgumentListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArgumentListContext() *ArgumentListContext {
	var p = new(ArgumentListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ScriptBlockParserRULE_argumentList
	return p
}

func (*ArgumentListContext) IsArgumentListContext() {}

func NewArgumentListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArgumentListContext {
	var p = new(ArgumentListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ScriptBlockParserRULE_argumentList

	return p
}

func (s *ArgumentListContext) GetParser() antlr.Parser { return s.parser }

func (s *ArgumentListContext) OPAREN() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserOPAREN, 0)
}

func (s *ArgumentListContext) CPAREN() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserCPAREN, 0)
}

func (s *ArgumentListContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *ArgumentListContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ArgumentListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserCOMMA)
}

func (s *ArgumentListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserCOMMA, i)
}

func (s *ArgumentListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArgumentListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArgumentListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.EnterArgumentList(s)
	}
}

func (s *ArgumentListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.ExitArgumentList(s)
	}
}

func (p *ScriptBlockParser) ArgumentList() (localctx IArgumentListContext) {
	localctx = NewArgumentListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ScriptBlockParserRULE_argumentList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.Match(ScriptBlockParserOPAREN)
	}
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la-11)&-(0x1f+1)) == 0 && ((1<<uint((_la-11)))&((1<<(ScriptBlockParserRUN-11))|(1<<(ScriptBlockParserOPAREN-11))|(1<<(ScriptBlockParserLESS_THAN-11))|(1<<(ScriptBlockParserIDENTIFIER-11))|(1<<(ScriptBlockParserSIGN-11))|(1<<(ScriptBlockParserDIGITS-11))|(1<<(ScriptBlockParserSTRING-11)))) != 0 {
		{
			p.SetState(83)
			p.expression(0)
		}
		p.SetState(88)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == ScriptBlockParserCOMMA {
			{
				p.SetState(84)
				p.Match(ScriptBlockParserCOMMA)
			}
			{
				p.SetState(85)
				p.expression(0)
			}

			p.SetState(90)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(93)
		p.Match(ScriptBlockParserCPAREN)
	}

	return localctx
}

// IStructureListContext is an interface to support dynamic dispatch.
type IStructureListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStructureListContext differentiates from other interfaces.
	IsStructureListContext()
}

type StructureListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStructureListContext() *StructureListContext {
	var p = new(StructureListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ScriptBlockParserRULE_structureList
	return p
}

func (*StructureListContext) IsStructureListContext() {}

func NewStructureListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StructureListContext {
	var p = new(StructureListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ScriptBlockParserRULE_structureList

	return p
}

func (s *StructureListContext) GetParser() antlr.Parser { return s.parser }

func (s *StructureListContext) OSQUARE() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserOSQUARE, 0)
}

func (s *StructureListContext) CSQUARE() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserCSQUARE, 0)
}

func (s *StructureListContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *StructureListContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StructureListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(ScriptBlockParserCOMMA)
}

func (s *StructureListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserCOMMA, i)
}

func (s *StructureListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StructureListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StructureListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.EnterStructureList(s)
	}
}

func (s *StructureListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.ExitStructureList(s)
	}
}

func (p *ScriptBlockParser) StructureList() (localctx IStructureListContext) {
	localctx = NewStructureListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ScriptBlockParserRULE_structureList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(95)
		p.Match(ScriptBlockParserOSQUARE)
	}
	p.SetState(104)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la-11)&-(0x1f+1)) == 0 && ((1<<uint((_la-11)))&((1<<(ScriptBlockParserRUN-11))|(1<<(ScriptBlockParserOPAREN-11))|(1<<(ScriptBlockParserLESS_THAN-11))|(1<<(ScriptBlockParserIDENTIFIER-11))|(1<<(ScriptBlockParserSIGN-11))|(1<<(ScriptBlockParserDIGITS-11))|(1<<(ScriptBlockParserSTRING-11)))) != 0 {
		{
			p.SetState(96)
			p.expression(0)
		}
		p.SetState(101)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == ScriptBlockParserCOMMA {
			{
				p.SetState(97)
				p.Match(ScriptBlockParserCOMMA)
			}
			{
				p.SetState(98)
				p.expression(0)
			}

			p.SetState(103)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(106)
		p.Match(ScriptBlockParserCSQUARE)
	}

	return localctx
}

// INativeCallContext is an interface to support dynamic dispatch.
type INativeCallContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNativeCallContext differentiates from other interfaces.
	IsNativeCallContext()
}

type NativeCallContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNativeCallContext() *NativeCallContext {
	var p = new(NativeCallContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ScriptBlockParserRULE_nativeCall
	return p
}

func (*NativeCallContext) IsNativeCallContext() {}

func NewNativeCallContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NativeCallContext {
	var p = new(NativeCallContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ScriptBlockParserRULE_nativeCall

	return p
}

func (s *NativeCallContext) GetParser() antlr.Parser { return s.parser }

func (s *NativeCallContext) NATIVE() antlr.TerminalNode {
	return s.GetToken(ScriptBlockParserNATIVE, 0)
}

func (s *NativeCallContext) ArgumentList() IArgumentListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArgumentListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArgumentListContext)
}

func (s *NativeCallContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NativeCallContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NativeCallContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.EnterNativeCall(s)
	}
}

func (s *NativeCallContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ScriptBlockParserListener); ok {
		listenerT.ExitNativeCall(s)
	}
}

func (p *ScriptBlockParser) NativeCall() (localctx INativeCallContext) {
	localctx = NewNativeCallContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, ScriptBlockParserRULE_nativeCall)

	defer func() {
		p.ExitRule()
	}()
